--- a/style.css
+++ b/style.css
@@ -7,11 +7,6 @@ body {
   height: 4vh;
   margin: 0 auto;
 }
-/* @media (max-width: 820px) {
-  .header {
-    width: 100%;
-  }
-} */
 .logo {
   width: 25px;
   margin: 3px;
@@ -54,10 +49,10 @@ body {
   color: gray;
   font-size: 18px;
 }
-.body-container ol li{
+.body-container ol li {
   padding: 0 0 10px 0;
 }
-.blank{
+.blank {
   width: inherit;
   height: 20px;
 }
@@ -65,17 +60,17 @@ body {
   color: black;
   font-size: 20px;
 }
-.main-sub-title{
+.main-sub-title {
   color: gray;
   font-size: 15px;
   text-decoration: none;
 }
-.main-sub-title a:link{
+.main-sub-title a:link {
   color: grey;
-  text-decoration: none
+  text-decoration: none;
 }
-.main-sub-title a:hover{
-  text-decoration: underline
+.main-sub-title a:hover {
+  text-decoration: underline;
 }
 .main-sub-title a:visited {
   color: gray;
@@ -150,16 +145,16 @@ ol li {
   color: gray;
   text-decoration: none;
 }
-.link{
+.link {
   display: inline;
 }
 
-.link a:link{
+.link a:link {
   color: gray;
   text-decoration: none;
 }
-.link a:hover{
-  text-decoration: underline
+.link a:hover {
+  text-decoration: underline;
 }
 .link a:visited {
   color: gray;
