--- a/style.css
+++ b/style.css
@@ -45,12 +45,13 @@ body {
 }
 .body-container ol {
   margin: 0px;
-  padding-left: 2rem;
+  padding-left: 0;
   color: gray;
   font-size: 18px;
 }
 .body-container ol li {
   padding: 0 0 10px 0;
+  list-style-type : none 
 }
 .blank {
   width: inherit;
@@ -76,7 +77,7 @@ body {
   color: gray;
 }
 .sub-title {
-  margin-left: 21px;
+  padding-left: 3.5rem;
   color: grey;
   font-size: 15px;
 }
@@ -148,7 +149,6 @@ ol li {
 .link {
   display: inline;
 }
-
 .link a:link {
   color: gray;
   text-decoration: none;
@@ -158,4 +158,24 @@ ol li {
 }
 .link a:visited {
   color: gray;
+}
+.more{
+  cursor: pointer;
+}
+.list-padding-left{
+  padding-left: 1.2rem;
+}
+.link-title {
+  display: inline;
+}
+
+.link-title a:link {
+  color: black;
+  text-decoration: none;
+}
+.link-title a:hover {
+  text-decoration: none;
+}
+.link-title a:visited {
+  color: black;
 }
